parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    equalequal

Grammar

Rule 0     S' -> expr
Rule 1     expr -> term plus term
Rule 2     expr -> COS opening term closing
Rule 3     expr -> SIN opening term closing
Rule 4     expr -> TAN opening term closing
Rule 5     expr -> ROOT opening term closing
Rule 6     expr -> ROOT opening term term closing
Rule 7     expr -> COS opening term closing plus term
Rule 8     expr -> SIN opening term closing plus term
Rule 9     expr -> TAN opening term closing plus term
Rule 10    expr -> COS opening term closing minus term
Rule 11    expr -> SIN opening term closing minus term
Rule 12    expr -> TAN opening term closing minus term
Rule 13    expr -> SIN opening term closing times term
Rule 14    expr -> COS opening term closing times term
Rule 15    expr -> TAN opening term closing times term
Rule 16    expr -> term minus COS opening term closing
Rule 17    expr -> term plus COS opening term closing
Rule 18    expr -> term times COS opening term closing
Rule 19    expr -> term divide COS opening term closing
Rule 20    expr -> term minus SIN opening term closing
Rule 21    expr -> term plus SIN opening term closing
Rule 22    expr -> term times SIN opening term closing
Rule 23    expr -> term divide SIN opening term closing
Rule 24    expr -> term plus TAN opening term closing
Rule 25    expr -> term minus TAN opening term closing
Rule 26    expr -> term times TAN opening term closing
Rule 27    expr -> term divide TAN opening term closing
Rule 28    expr -> COS opening term closing plus COS opening term closing
Rule 29    expr -> SIN opening term closing plus SIN opening term closing
Rule 30    expr -> TAN opening term closing plus TAN opening term closing
Rule 31    expr -> COS opening term closing plus SIN opening term closing
Rule 32    expr -> COS opening term closing plus TAN opening term closing
Rule 33    expr -> SIN opening term closing plus COS opening term closing
Rule 34    expr -> SIN opening term closing plus TAN opening term closing
Rule 35    expr -> TAN opening term closing plus SIN opening term closing
Rule 36    expr -> TAN opening term closing plus COS opening term closing
Rule 37    expr -> COS opening term closing minus COS opening term closing
Rule 38    expr -> SIN opening term closing minus SIN opening term closing
Rule 39    expr -> TAN opening term closing minus TAN opening term closing
Rule 40    expr -> COS opening term closing minus SIN opening term closing
Rule 41    expr -> COS opening term closing minus TAN opening term closing
Rule 42    expr -> SIN opening term closing minus COS opening term closing
Rule 43    expr -> SIN opening term closing minus TAN opening term closing
Rule 44    expr -> TAN opening term closing minus SIN opening term closing
Rule 45    expr -> TAN opening term closing minus COS opening term closing
Rule 46    expr -> COS opening term closing times COS opening term closing
Rule 47    expr -> SIN opening term closing times SIN opening term closing
Rule 48    expr -> TAN opening term closing times TAN opening term closing
Rule 49    expr -> COS opening term closing times SIN opening term closing
Rule 50    expr -> COS opening term closing times TAN opening term closing
Rule 51    expr -> SIN opening term closing times COS opening term closing
Rule 52    expr -> SIN opening term closing times TAN opening term closing
Rule 53    expr -> TAN opening term closing times SIN opening term closing
Rule 54    expr -> TAN opening term closing times COS opening term closing
Rule 55    expr -> COS opening term closing divide COS opening term closing
Rule 56    expr -> SIN opening term closing divide SIN opening term closing
Rule 57    expr -> TAN opening term closing divide TAN opening term closing
Rule 58    expr -> COS opening term closing divide SIN opening term closing
Rule 59    expr -> COS opening term closing divide TAN opening term closing
Rule 60    expr -> SIN opening term closing divide COS opening term closing
Rule 61    expr -> SIN opening term closing divide TAN opening term closing
Rule 62    expr -> TAN opening term closing divide SIN opening term closing
Rule 63    expr -> TAN opening term closing divide COS opening term closing
Rule 64    expr -> E pow term
Rule 65    expr -> term mod term
Rule 66    expr -> term sumto term
Rule 67    expr -> LOG opening term term closing
Rule 68    expr -> LOG opening term closing
Rule 69    expr -> term minus term
Rule 70    expr -> term lessthan term
Rule 71    expr -> term greaterthan term
Rule 72    expr -> term pow term
Rule 73    expr -> term equal term
Rule 74    expr -> term greaterthanequal term
Rule 75    expr -> term lessthanequal term
Rule 76    expr -> term times term
Rule 77    expr -> term divide term
Rule 78    expr -> term range term
Rule 79    expr -> term factorial
Rule 80    term -> integer
Rule 81    opening -> open
Rule 82    closing -> closed

Terminals, with rules where they appear

COS                  : 2 7 10 14 16 17 18 19 28 28 31 32 33 36 37 37 40 41 42 45 46 46 49 50 51 54 55 55 58 59 60 63
E                    : 64
LOG                  : 67 68
ROOT                 : 5 6
SIN                  : 3 8 11 13 20 21 22 23 29 29 31 33 34 35 38 38 40 42 43 44 47 47 49 51 52 53 56 56 58 60 61 62
TAN                  : 4 9 12 15 24 25 26 27 30 30 32 34 35 36 39 39 41 43 44 45 48 48 50 52 53 54 57 57 59 61 62 63
closed               : 82
divide               : 19 23 27 55 56 57 58 59 60 61 62 63 77
equal                : 73
equalequal           : 
error                : 
factorial            : 79
greaterthan          : 71
greaterthanequal     : 74
integer              : 80
lessthan             : 70
lessthanequal        : 75
minus                : 10 11 12 16 20 25 37 38 39 40 41 42 43 44 45 69
mod                  : 65
open                 : 81
plus                 : 1 7 8 9 17 21 24 28 29 30 31 32 33 34 35 36
pow                  : 64 72
range                : 78
sumto                : 66
times                : 13 14 15 18 22 26 46 47 48 49 50 51 52 53 54 76

Nonterminals, with rules where they appear

closing              : 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 67 68
expr                 : 0
opening              : 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 67 68
term                 : 1 1 2 3 4 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 65 65 66 66 67 67 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79

Parsing method: LALR

state 0

    (0) S' -> . expr
    (1) expr -> . term plus term
    (2) expr -> . COS opening term closing
    (3) expr -> . SIN opening term closing
    (4) expr -> . TAN opening term closing
    (5) expr -> . ROOT opening term closing
    (6) expr -> . ROOT opening term term closing
    (7) expr -> . COS opening term closing plus term
    (8) expr -> . SIN opening term closing plus term
    (9) expr -> . TAN opening term closing plus term
    (10) expr -> . COS opening term closing minus term
    (11) expr -> . SIN opening term closing minus term
    (12) expr -> . TAN opening term closing minus term
    (13) expr -> . SIN opening term closing times term
    (14) expr -> . COS opening term closing times term
    (15) expr -> . TAN opening term closing times term
    (16) expr -> . term minus COS opening term closing
    (17) expr -> . term plus COS opening term closing
    (18) expr -> . term times COS opening term closing
    (19) expr -> . term divide COS opening term closing
    (20) expr -> . term minus SIN opening term closing
    (21) expr -> . term plus SIN opening term closing
    (22) expr -> . term times SIN opening term closing
    (23) expr -> . term divide SIN opening term closing
    (24) expr -> . term plus TAN opening term closing
    (25) expr -> . term minus TAN opening term closing
    (26) expr -> . term times TAN opening term closing
    (27) expr -> . term divide TAN opening term closing
    (28) expr -> . COS opening term closing plus COS opening term closing
    (29) expr -> . SIN opening term closing plus SIN opening term closing
    (30) expr -> . TAN opening term closing plus TAN opening term closing
    (31) expr -> . COS opening term closing plus SIN opening term closing
    (32) expr -> . COS opening term closing plus TAN opening term closing
    (33) expr -> . SIN opening term closing plus COS opening term closing
    (34) expr -> . SIN opening term closing plus TAN opening term closing
    (35) expr -> . TAN opening term closing plus SIN opening term closing
    (36) expr -> . TAN opening term closing plus COS opening term closing
    (37) expr -> . COS opening term closing minus COS opening term closing
    (38) expr -> . SIN opening term closing minus SIN opening term closing
    (39) expr -> . TAN opening term closing minus TAN opening term closing
    (40) expr -> . COS opening term closing minus SIN opening term closing
    (41) expr -> . COS opening term closing minus TAN opening term closing
    (42) expr -> . SIN opening term closing minus COS opening term closing
    (43) expr -> . SIN opening term closing minus TAN opening term closing
    (44) expr -> . TAN opening term closing minus SIN opening term closing
    (45) expr -> . TAN opening term closing minus COS opening term closing
    (46) expr -> . COS opening term closing times COS opening term closing
    (47) expr -> . SIN opening term closing times SIN opening term closing
    (48) expr -> . TAN opening term closing times TAN opening term closing
    (49) expr -> . COS opening term closing times SIN opening term closing
    (50) expr -> . COS opening term closing times TAN opening term closing
    (51) expr -> . SIN opening term closing times COS opening term closing
    (52) expr -> . SIN opening term closing times TAN opening term closing
    (53) expr -> . TAN opening term closing times SIN opening term closing
    (54) expr -> . TAN opening term closing times COS opening term closing
    (55) expr -> . COS opening term closing divide COS opening term closing
    (56) expr -> . SIN opening term closing divide SIN opening term closing
    (57) expr -> . TAN opening term closing divide TAN opening term closing
    (58) expr -> . COS opening term closing divide SIN opening term closing
    (59) expr -> . COS opening term closing divide TAN opening term closing
    (60) expr -> . SIN opening term closing divide COS opening term closing
    (61) expr -> . SIN opening term closing divide TAN opening term closing
    (62) expr -> . TAN opening term closing divide SIN opening term closing
    (63) expr -> . TAN opening term closing divide COS opening term closing
    (64) expr -> . E pow term
    (65) expr -> . term mod term
    (66) expr -> . term sumto term
    (67) expr -> . LOG opening term term closing
    (68) expr -> . LOG opening term closing
    (69) expr -> . term minus term
    (70) expr -> . term lessthan term
    (71) expr -> . term greaterthan term
    (72) expr -> . term pow term
    (73) expr -> . term equal term
    (74) expr -> . term greaterthanequal term
    (75) expr -> . term lessthanequal term
    (76) expr -> . term times term
    (77) expr -> . term divide term
    (78) expr -> . term range term
    (79) expr -> . term factorial
    (80) term -> . integer

    COS             shift and go to state 1
    SIN             shift and go to state 2
    TAN             shift and go to state 4
    ROOT            shift and go to state 5
    E               shift and go to state 6
    LOG             shift and go to state 3
    integer         shift and go to state 7

    expr                           shift and go to state 9
    term                           shift and go to state 8

state 1

    (2) expr -> COS . opening term closing
    (7) expr -> COS . opening term closing plus term
    (10) expr -> COS . opening term closing minus term
    (14) expr -> COS . opening term closing times term
    (28) expr -> COS . opening term closing plus COS opening term closing
    (31) expr -> COS . opening term closing plus SIN opening term closing
    (32) expr -> COS . opening term closing plus TAN opening term closing
    (37) expr -> COS . opening term closing minus COS opening term closing
    (40) expr -> COS . opening term closing minus SIN opening term closing
    (41) expr -> COS . opening term closing minus TAN opening term closing
    (46) expr -> COS . opening term closing times COS opening term closing
    (49) expr -> COS . opening term closing times SIN opening term closing
    (50) expr -> COS . opening term closing times TAN opening term closing
    (55) expr -> COS . opening term closing divide COS opening term closing
    (58) expr -> COS . opening term closing divide SIN opening term closing
    (59) expr -> COS . opening term closing divide TAN opening term closing
    (81) opening -> . open

    open            shift and go to state 11

    opening                        shift and go to state 10

state 2

    (3) expr -> SIN . opening term closing
    (8) expr -> SIN . opening term closing plus term
    (11) expr -> SIN . opening term closing minus term
    (13) expr -> SIN . opening term closing times term
    (29) expr -> SIN . opening term closing plus SIN opening term closing
    (33) expr -> SIN . opening term closing plus COS opening term closing
    (34) expr -> SIN . opening term closing plus TAN opening term closing
    (38) expr -> SIN . opening term closing minus SIN opening term closing
    (42) expr -> SIN . opening term closing minus COS opening term closing
    (43) expr -> SIN . opening term closing minus TAN opening term closing
    (47) expr -> SIN . opening term closing times SIN opening term closing
    (51) expr -> SIN . opening term closing times COS opening term closing
    (52) expr -> SIN . opening term closing times TAN opening term closing
    (56) expr -> SIN . opening term closing divide SIN opening term closing
    (60) expr -> SIN . opening term closing divide COS opening term closing
    (61) expr -> SIN . opening term closing divide TAN opening term closing
    (81) opening -> . open

    open            shift and go to state 11

    opening                        shift and go to state 12

state 3

    (67) expr -> LOG . opening term term closing
    (68) expr -> LOG . opening term closing
    (81) opening -> . open

    open            shift and go to state 11

    opening                        shift and go to state 13

state 4

    (4) expr -> TAN . opening term closing
    (9) expr -> TAN . opening term closing plus term
    (12) expr -> TAN . opening term closing minus term
    (15) expr -> TAN . opening term closing times term
    (30) expr -> TAN . opening term closing plus TAN opening term closing
    (35) expr -> TAN . opening term closing plus SIN opening term closing
    (36) expr -> TAN . opening term closing plus COS opening term closing
    (39) expr -> TAN . opening term closing minus TAN opening term closing
    (44) expr -> TAN . opening term closing minus SIN opening term closing
    (45) expr -> TAN . opening term closing minus COS opening term closing
    (48) expr -> TAN . opening term closing times TAN opening term closing
    (53) expr -> TAN . opening term closing times SIN opening term closing
    (54) expr -> TAN . opening term closing times COS opening term closing
    (57) expr -> TAN . opening term closing divide TAN opening term closing
    (62) expr -> TAN . opening term closing divide SIN opening term closing
    (63) expr -> TAN . opening term closing divide COS opening term closing
    (81) opening -> . open

    open            shift and go to state 11

    opening                        shift and go to state 14

state 5

    (5) expr -> ROOT . opening term closing
    (6) expr -> ROOT . opening term term closing
    (81) opening -> . open

    open            shift and go to state 11

    opening                        shift and go to state 15

state 6

    (64) expr -> E . pow term

    pow             shift and go to state 16


state 7

    (80) term -> integer .

    $end            reduce using rule 80 (term -> integer .)
    closed          reduce using rule 80 (term -> integer .)
    plus            reduce using rule 80 (term -> integer .)
    minus           reduce using rule 80 (term -> integer .)
    times           reduce using rule 80 (term -> integer .)
    divide          reduce using rule 80 (term -> integer .)
    mod             reduce using rule 80 (term -> integer .)
    sumto           reduce using rule 80 (term -> integer .)
    lessthan        reduce using rule 80 (term -> integer .)
    greaterthan     reduce using rule 80 (term -> integer .)
    pow             reduce using rule 80 (term -> integer .)
    equal           reduce using rule 80 (term -> integer .)
    greaterthanequal reduce using rule 80 (term -> integer .)
    lessthanequal   reduce using rule 80 (term -> integer .)
    range           reduce using rule 80 (term -> integer .)
    factorial       reduce using rule 80 (term -> integer .)
    integer         reduce using rule 80 (term -> integer .)


state 8

    (1) expr -> term . plus term
    (16) expr -> term . minus COS opening term closing
    (17) expr -> term . plus COS opening term closing
    (18) expr -> term . times COS opening term closing
    (19) expr -> term . divide COS opening term closing
    (20) expr -> term . minus SIN opening term closing
    (21) expr -> term . plus SIN opening term closing
    (22) expr -> term . times SIN opening term closing
    (23) expr -> term . divide SIN opening term closing
    (24) expr -> term . plus TAN opening term closing
    (25) expr -> term . minus TAN opening term closing
    (26) expr -> term . times TAN opening term closing
    (27) expr -> term . divide TAN opening term closing
    (65) expr -> term . mod term
    (66) expr -> term . sumto term
    (69) expr -> term . minus term
    (70) expr -> term . lessthan term
    (71) expr -> term . greaterthan term
    (72) expr -> term . pow term
    (73) expr -> term . equal term
    (74) expr -> term . greaterthanequal term
    (75) expr -> term . lessthanequal term
    (76) expr -> term . times term
    (77) expr -> term . divide term
    (78) expr -> term . range term
    (79) expr -> term . factorial

    plus            shift and go to state 25
    minus           shift and go to state 29
    times           shift and go to state 23
    divide          shift and go to state 18
    mod             shift and go to state 30
    sumto           shift and go to state 22
    lessthan        shift and go to state 24
    greaterthan     shift and go to state 27
    pow             shift and go to state 21
    equal           shift and go to state 26
    greaterthanequal shift and go to state 19
    lessthanequal   shift and go to state 17
    range           shift and go to state 28
    factorial       shift and go to state 20


state 9

    (0) S' -> expr .



state 10

    (2) expr -> COS opening . term closing
    (7) expr -> COS opening . term closing plus term
    (10) expr -> COS opening . term closing minus term
    (14) expr -> COS opening . term closing times term
    (28) expr -> COS opening . term closing plus COS opening term closing
    (31) expr -> COS opening . term closing plus SIN opening term closing
    (32) expr -> COS opening . term closing plus TAN opening term closing
    (37) expr -> COS opening . term closing minus COS opening term closing
    (40) expr -> COS opening . term closing minus SIN opening term closing
    (41) expr -> COS opening . term closing minus TAN opening term closing
    (46) expr -> COS opening . term closing times COS opening term closing
    (49) expr -> COS opening . term closing times SIN opening term closing
    (50) expr -> COS opening . term closing times TAN opening term closing
    (55) expr -> COS opening . term closing divide COS opening term closing
    (58) expr -> COS opening . term closing divide SIN opening term closing
    (59) expr -> COS opening . term closing divide TAN opening term closing
    (80) term -> . integer

    integer         shift and go to state 7

    term                           shift and go to state 31

state 11

    (81) opening -> open .

    integer         reduce using rule 81 (opening -> open .)


state 12

    (3) expr -> SIN opening . term closing
    (8) expr -> SIN opening . term closing plus term
    (11) expr -> SIN opening . term closing minus term
    (13) expr -> SIN opening . term closing times term
    (29) expr -> SIN opening . term closing plus SIN opening term closing
    (33) expr -> SIN opening . term closing plus COS opening term closing
    (34) expr -> SIN opening . term closing plus TAN opening term closing
    (38) expr -> SIN opening . term closing minus SIN opening term closing
    (42) expr -> SIN opening . term closing minus COS opening term closing
    (43) expr -> SIN opening . term closing minus TAN opening term closing
    (47) expr -> SIN opening . term closing times SIN opening term closing
    (51) expr -> SIN opening . term closing times COS opening term closing
    (52) expr -> SIN opening . term closing times TAN opening term closing
    (56) expr -> SIN opening . term closing divide SIN opening term closing
    (60) expr -> SIN opening . term closing divide COS opening term closing
    (61) expr -> SIN opening . term closing divide TAN opening term closing
    (80) term -> . integer

    integer         shift and go to state 7

    term                           shift and go to state 32

state 13

    (67) expr -> LOG opening . term term closing
    (68) expr -> LOG opening . term closing
    (80) term -> . integer

    integer         shift and go to state 7

    term                           shift and go to state 33

state 14

    (4) expr -> TAN opening . term closing
    (9) expr -> TAN opening . term closing plus term
    (12) expr -> TAN opening . term closing minus term
    (15) expr -> TAN opening . term closing times term
    (30) expr -> TAN opening . term closing plus TAN opening term closing
    (35) expr -> TAN opening . term closing plus SIN opening term closing
    (36) expr -> TAN opening . term closing plus COS opening term closing
    (39) expr -> TAN opening . term closing minus TAN opening term closing
    (44) expr -> TAN opening . term closing minus SIN opening term closing
    (45) expr -> TAN opening . term closing minus COS opening term closing
    (48) expr -> TAN opening . term closing times TAN opening term closing
    (53) expr -> TAN opening . term closing times SIN opening term closing
    (54) expr -> TAN opening . term closing times COS opening term closing
    (57) expr -> TAN opening . term closing divide TAN opening term closing
    (62) expr -> TAN opening . term closing divide SIN opening term closing
    (63) expr -> TAN opening . term closing divide COS opening term closing
    (80) term -> . integer

    integer         shift and go to state 7

    term                           shift and go to state 34

state 15

    (5) expr -> ROOT opening . term closing
    (6) expr -> ROOT opening . term term closing
    (80) term -> . integer

    integer         shift and go to state 7

    term                           shift and go to state 35

state 16

    (64) expr -> E pow . term
    (80) term -> . integer

    integer         shift and go to state 7

    term                           shift and go to state 36

state 17

    (75) expr -> term lessthanequal . term
    (80) term -> . integer

    integer         shift and go to state 7

    term                           shift and go to state 37

state 18
